# low-power-speech-recognition

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  project.xml  words.txt
data/: amalie_da.txt  amalie_en.txt  amar_da.txt  amar_en.txt  voice.txt
modm/link/: linkerscript.ld
modm/src/modm/: math.hpp  platform.hpp
modm/src/modm/architecture/: interface.hpp
modm/src/modm/platform/: device.hpp
modm/src/modm/platform/adc/: adc_interrupt_1.cpp  adc_interrupt_1.hpp  adc_interrupts.cpp
modm/src/modm/platform/clock/: rcc.cpp  rcc_impl.hpp  systick_timer.cpp
modm/src/modm/platform/core/: delay.cpp  heap_newlib.c  peripherals.hpp  startup.c  unaligned.hpp  vectors.c
modm/src/modm/platform/gpio/: base.hpp  enable.cpp  gpio_A0.hpp  gpio_A1.hpp  gpio_A10.hpp  gpio_A11.hpp  gpio_A12.hpp  gpio_A13.hpp  gpio_A14.hpp  gpio_A15.hpp  gpio_A2.hpp  gpio_A3.hpp  gpio_A4.hpp  gpio_A5.hpp  gpio_A6.hpp  gpio_A7.hpp  gpio_A8.hpp  gpio_A9.hpp  gpio_B0.hpp  gpio_B1.hpp  gpio_B10.hpp  gpio_B12.hpp  gpio_B13.hpp  gpio_B14.hpp  gpio_B15.hpp  gpio_B2.hpp  gpio_B3.hpp  gpio_B4.hpp  gpio_B5.hpp  gpio_B6.hpp  gpio_B7.hpp  gpio_B8.hpp  gpio_B9.hpp  gpio_C0.hpp  gpio_C1.hpp  gpio_C10.hpp  gpio_C11.hpp  gpio_C12.hpp  gpio_C13.hpp  gpio_C14.hpp  (+16 more)
modm/src/modm/platform/timer/: basic_base.hpp  timer_5.cpp  timer_5.hpp
modm/src/modm/platform/uart/: uart_baudrate.hpp
scripts/: dtw_test.py  linkerscript.ld  mfcc_record.py  openocd.cfg  plot.py  toolchain.cmake  voice_commands_to_cpp.py  windows_install.ps1
src/app/: main.cpp
src/boards/main/: dtw.hpp  hanning_window.hpp  main.cpp  mfcc.hpp  transform.hpp
src/common/: blink_thread.hpp  board.cpp  board.hpp  timekeeping.hpp  utils.hpp
